--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simulador Carrito de Compras</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Primer entrega Federico Gonzalez</h1>
-    <h2>Comisión 84740</h2>
-    <script src="main.js"></script>
+    <header>
+        <h1>Tienda Electrónica - Carrito de Compras</h1>
+    </header>
+    <main>
+        <section id="productos">
+            <h2>Productos Disponibles</h2>
+            <div id="lista-productos"></div>
+        </section>
+        <section id="carrito">
+            <h2>Tu Carrito</h2>
+            <div id="lista-carrito"></div>
+            <p>Total: $<span id="total">0</span></p>
+            <button id="vaciar-carrito">Vaciar Carrito</button>
+        </section>
+    </main>
+    <script src="./java/main.js"></script>
 </body>
 </html>
