--- a/index.html
+++ b/index.html
@@ -1,27 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador Carrito de Compras</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>TechFix | Cotizador Técnico</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <header>
-        <h1>Tienda Electrónica - Carrito de Compras</h1>
-    </header>
-    <main>
-        <section id="productos">
-            <h2>Productos Disponibles</h2>
-            <div id="lista-productos"></div>
-        </section>
-        <section id="carrito">
-            <h2>Tu Carrito</h2>
-            <div id="lista-carrito"></div>
-            <p>Total: $<span id="total">0</span></p>
-            <button id="vaciar-carrito">Vaciar Carrito</button>
-        </section>
-    </main>
+
+<body class="bg-light">
+
+    <nav class="navbar navbar-dark bg-primary shadow-sm">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1">⚡ Goetech Servicio Técnico</span>
+            <span class="text-white">Simulador de Presupuestos</span>
+        </div>
+    </nav>
+
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-md-8">
+                <h2 class="mb-4 text-primary">Repuestos y Servicios Disponibles</h2>
+                <div id="contenedor-productos" class="row g-3">
+                    <div class="text-center mt-5">
+                        <div class="spinner-border text-primary" role="status">
+                            <span class="visually-hidden">Cargando...</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card shadow sticky-top" style="top: 20px;">
+                    <div class="card-header bg-dark text-white">
+                        <h4 class="mb-0">Presupuesto Actual</h4>
+                    </div>
+                    <div class="card-body">
+                        <ul id="carrito-items" class="list-group list-group-flush mb-3">
+                            <li class="list-group-item text-center text-muted">El presupuesto está vacío.</li>
+                        </ul>
+
+                        <div class="d-flex justify-content-between align-items-center mb-4">
+                            <h5>Total Estimado:</h5>
+                            <h3 class="text-success">$<span id="precio-total">0</span></h3>
+                        </div>
+
+                        <hr>
+
+                        <h5 class="mb-3">Datos del Técnico</h5>
+                        <form id="form-presupuesto">
+                            <div class="mb-3">
+                                <label for="tecnico" class="form-label">Técnico Responsable</label>
+                                <input type="text" class="form-control" id="tecnico" value="Fede" readonly>
+                            </div>
+                            <div class="mb-3">
+                                <label for="sucursal" class="form-label">Sucursal / Ubicación</label>
+                                <input type="text" class="form-control" id="sucursal" value="Villa Carlos Paz, Córdoba"
+                                    required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="cliente" class="form-label">Nombre del Cliente</label>
+                                <input type="text" class="form-control" id="cliente"
+                                    placeholder="Ingrese nombre del cliente" required>
+                            </div>
+
+                            <button type="submit" class="btn btn-success w-100 btn-lg">Generar Orden</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./java/main.js"></script>
 </body>
+
 </html>
